apps/chaos-mesh/envs/gke-prod-01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chaos-mesh-dashboard
  namespace: chaos-mesh
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  parentRefs:
    - name: shared-gateway-int
      namespace: gateway-api
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames: ["chaos-mesh.k01.devm.corp.pinpetuk.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chaos-dashboard
          port: 2333
          kind: Service
          group: ''
          weight: 1
